macOS: Allow programatically minimizing frameless windows

NSWindowStyleMaskMiniaturizable also controls programatic
minimize, in addition to the window decoration button.

Fixes: QTBUG-65637
Change-Id: Iac5fb483433441173d770f4fcfb9e93440b9fe6a
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
(cherry picked from commit 556fbbea6e96c07c6cbd552c4179e5717e799acf)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>